--- a/src/app/cash-flows/cash-flows-new/cash-flows-new.component.html
+++ b/src/app/cash-flows/cash-flows-new/cash-flows-new.component.html
@@ -20,31 +20,37 @@
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
-        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+        <div class="col-md-2 col-lg-2 col-sm-2 pr-0">
           <label>Monto:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
           <i class="fa fa-dollar prefix"></i>
-          <input #cashFlowAmount="ngModel" required type="number" class="form-control" [class.is-invalid]="cashFlowAmount.invalid && (cashFlowAmount.dirty || cashFlowAmount.touched)"
+          <input #cashFlowAmount="ngModel" required type="number"
+            class="form-control customInput customInputNumberAmount"
+            [class.is-invalid]="cashFlowAmount.invalid && (cashFlowAmount.dirty || cashFlowAmount.touched)"
             name="cashFlowAmount" id="cashFlowAmount" [(ngModel)]="newCashFlow.totalAmount">
         </div>
       </div>
-      <div *ngIf="cashFlowAmount.invalid && (cashFlowAmount.dirty || cashFlowAmount.touched)" class="alert alert-danger">
+      <div *ngIf="cashFlowAmount.invalid && (cashFlowAmount.dirty || cashFlowAmount.touched)"
+        class="alert alert-danger">
         El monto es un campo es requerido.
       </div>
     </div>
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
-        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+        <div class="col-md-2 col-lg-2 col-sm-2 pr-0">
           <label>Caja:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <select #cashFlowCashRegister="ngModel" required type="text" class="form-control browser-default"
-            [class.is-invalid]="showMessageCashRegister" name="cashFlowCashRegister" (blur)="validateCashRegister(cashFlowCashRegister.value)"
-            (change)="validateCashRegister(cashFlowCashRegister.value)" id="cashFlowCashRegister" [(ngModel)]="newCashFlow.cashRegisterId">
+          <select #cashFlowCashRegister="ngModel" required type="text" class="form-control browser-default customInput"
+            [class.is-invalid]="showMessageCashRegister" name="cashFlowCashRegister"
+            (blur)="validateCashRegister(cashFlowCashRegister.value)"
+            (change)="validateCashRegister(cashFlowCashRegister.value)" id="cashFlowCashRegister"
+            [(ngModel)]="newCashFlow.cashRegisterId">
             <option value="default" default>Seleccione la caja...</option>
-            <option [value]="cashRegister._id" *ngFor='let cashRegister of cashRegisters'>{{ cashRegister.name }}</option>
+            <option [value]="cashRegister._id" *ngFor='let cashRegister of cashRegisters'>{{ cashRegister.name }}
+            </option>
           </select>
         </div>
       </div>
@@ -55,13 +61,13 @@
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
-        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+        <div class="col-md-2 col-lg-2 col-sm-2 pr-0">
           <label>Tipo:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <select #cashFlowType="ngModel" required type="text" class="form-control browser-default" [class.is-invalid]="showMessageType"
-            name="cashFlowType" (blur)="validateType(cashFlowType.value)" (change)="validateType(cashFlowType.value)"
-            id="cashFlowType" [(ngModel)]="newCashFlow.type">
+          <select #cashFlowType="ngModel" required type="text" class="form-control browser-default customInput"
+            [class.is-invalid]="showMessageType" name="cashFlowType" (blur)="validateType(cashFlowType.value)"
+            (change)="validateType(cashFlowType.value)" id="cashFlowType" [(ngModel)]="newCashFlow.type">
             <option value="default" default>Seleccione el tipo...</option>
             <option *ngFor='let type of typesArray'>{{ type }}</option>
           </select>
@@ -74,13 +80,15 @@
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
       <div class="row pl-2">
-        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
+        <div class="col-md-2 col-lg-2 col-sm-2 pr-0">
           <label>Tipo de Pago:</label>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <select #cashFlowPaymentType="ngModel" required type="text" class="form-control browser-default"
-            [class.is-invalid]="showMessagePaymentType" name="cashFlowPaymentType" (blur)="validatePaymentType(cashFlowPaymentType.value)"
-            (change)="validatePaymentType(cashFlowPaymentType.value)" id="cashFlowPaymentType" [(ngModel)]="newCashFlow.paymentType">
+          <select #cashFlowPaymentType="ngModel" required type="text" class="form-control browser-default customInput"
+            [class.is-invalid]="showMessagePaymentType" name="cashFlowPaymentType"
+            (blur)="validatePaymentType(cashFlowPaymentType.value)"
+            (change)="validatePaymentType(cashFlowPaymentType.value)" id="cashFlowPaymentType"
+            [(ngModel)]="newCashFlow.paymentType">
             <option value="default" default>Seleccione el tipo de pago...</option>
             <option [value]="paymentType._id" *ngFor='let paymentType of paymentTypes'>{{ paymentType.name }}</option>
           </select>
@@ -92,11 +100,17 @@
     </div>
 
     <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
-      <div class="row pl-2">
-        <div class="col-md-9 col-lg-9 col-sm-9 pl-0">
-          <textarea mdbActive #cashFlowComment="ngModel" class="md-textarea" id="cashFlowComment" name="cashFlowComment"
-            [(ngModel)]="newCashFlow.comment"></textarea>
-          <label for="cashFlowComment">Comentario:</label>
+      <div class="col-md-9 col-lg-9 col-sm-9 pl-0">
+        <div class="form-group">
+          <div class="row">
+            <label>Comentario:</label>
+          </div>
+          <br>          
+          <br>
+          <div class="row">
+            <textarea mdbActive #cashFlowComment="ngModel" class="md-textarea customInput" id="cashFlowComment"
+              name="cashFlowComment" [(ngModel)]="newCashFlow.comment"></textarea>
+          </div>
         </div>
       </div>
     </div>
@@ -104,8 +118,10 @@
 </div>
 <div class="col-12">
   <div class="col-7 offset-5">
-    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="(form.invalid || hasCashRegister || hasType || hasPaymentType)"
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true"
+      (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true"
+      [disabled]="(form.invalid || hasCashRegister || hasType || hasPaymentType)"
       (click)="saveCashFlow()">{{saveButton}}</button>
   </div>
 </div>
