--- a/src/app/pin-authenticate/pin-authenticate.component.html
+++ b/src/app/pin-authenticate/pin-authenticate.component.html
@@ -3,7 +3,7 @@
   </app-error-template>
 </ng-template>
 
-<div class="container col-md-12">
+<div class="col-md-12">
   <div class="row pageTitle primary-color">
     <div class="col-md-12">
       <h4 class="text-white text-center mb-0">{{ 'Users.enterPin' | translate }}</h4>
