--- a/src/app/product/product-new/product-new.component.css
+++ b/src/app/product/product-new/product-new.component.css
@@ -7,16 +7,6 @@ margin-bottom:10px;
 border-color:transparent;
 }
 
-.botonx{
-background-color:transparent;
-color:#bd290c;
-border-radius:30px;
-padding:10px;
-border:2px solid;
-margin-bottom:10px;
-border-color:#bd290c;
-}
-
 .chkAvailable {
   padding-top: 2.2rem;
   margin-left: 1.5rem;
@@ -30,4 +20,9 @@ border-color:#bd290c;
 ul li{
   display:inline-block;
   padding:10px;
+}
+
+#price {
+  width: 6rem;
+  text-align: right;
 }
