--- a/src/shared/components/error-template/error-template.component.html
+++ b/src/shared/components/error-template/error-template.component.html
@@ -1,4 +1,4 @@
-<div class="container col-md-12">
+<div class="col-md-12">
   <div class="row pageTitle primary-color">
     <div class="col-md-12">
       <h4 class="text-white text-center mb-0">{{ errorTitle }}</h4>    
