--- a/src/styles.scss
+++ b/src/styles.scss
@@ -184,10 +184,30 @@ table {
 }
 
 .customInput {
-  border: 1px solid #718239;
-  border-radius:20px;
-  background-color:transparent;
-  color:#555;
+  border: 1px solid #718239!important;
+  border-radius:20px!important;
+  background-color:transparent!important;
+  color:#555!important;
+  padding-left: 1rem!important;
+  padding-right: 1rem!important;
+}
+
+.customInput:focus {
+  border-color: 1px solid red!important;
+  border-radius:20px!important;
+  background-color:white!important;
+  color:#555!important;
+}
+
+.customInputNumberAmount {
+  margin: 0px!important;
+  height: .8rem!important;
+  width: 5rem!important;
+  text-align: right!important;
+}
+
+.customInputHeight {  
+  height: 1rem!important;  
 }
 
 .customDate{
@@ -513,4 +533,16 @@ border-radius:30px;
 .customImg {
   width: 400px; 
   height: 400px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
