--- a/src/app/stock-control/stock-control-modify/stock-control-modify.component.html
+++ b/src/app/stock-control/stock-control-modify/stock-control-modify.component.html
@@ -10,61 +10,75 @@
 </ng-template>
 
 <!-- Form -->
-<div *ngIf="product" class="col-12 pl-0 pr-0">
+<div *ngIf="product" class="col-12 pl-0 pr-0" style="height: 80vh;">
   <div class="col-12 pr-0 outletTitle">
     <h5>
       {{pageTitle + productNameModified}}
     </h5>
   </div>
-    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
-      <div class="row pl-2">
-        <div class="col-md-4 col-lg-4 col-sm-4 pr-0">
-          <label>Nombre Producto</label>
-        </div>
-        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
-          <input required type="text" disabled class="form-control"
-            id="productName" [(ngModel)]="product.name">
-        </div>
+
+  <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+    <div class="row pl-2">
+      <div class="col-md-4 col-lg-4 col-sm-4 col-4 col-xl-3 pr-0">
+        <label>Nombre Producto</label>
+      </div>
+      <div class="col-md-5 col-lg-5 col-sm-5 col-4 pl-0">
+        <input required type="text" disabled class="form-control customInput customInputHeight" id="productName"
+          [(ngModel)]="product.name">
       </div>
     </div>
+  </div>
 
-    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
-      <div class="row pl-2">
-        <div class="col-md-4 col-lg-4">
-          <div class="md-form">
-            <mdb-checkbox [class.checkbox-primary-custom]="true"  [(ngModel)]="stockControl" name="checkStockCOntrol"> {{ stockControlText }}</mdb-checkbox>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="row col-md-8 col-lg-8">
-      <div class="col-md-6 col-lg-6">
+  <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pr-3 pl-2">
+    <div class="row pl-2">
+      <div class="col-md-8 col-lg-8">
         <div class="md-form">
-          <input mdbActive type="number" [(ngModel)]="minStock" class="form-control" id="min">
-          <label for="min" class="">Minimo:</label>
-        </div>
-        <div *ngIf="stockControl && !minStock" class="alert alert-danger">
-          El stock minimo es requerido`
-        </div>
-      </div>
-      <div class="col-md-6 col-lg-6">
-        <div class="md-form">
-          <input mdbActive type="number" [(ngModel)]="currentStock" class="form-control" id="current">
-          <label for="current" class="">Actual:</label>
-        </div>
-        <div *ngIf="stockControl && !currentStock" class="alert alert-danger">
-          El stock actual es requerido.
+          <mdb-checkbox [class.checkbox-primary-custom]="true" [(ngModel)]="stockControl" name="checkStockCOntrol">
+            {{ stockControlText }}</mdb-checkbox>
         </div>
       </div>
     </div>
-    <div class="col-12">
-      <div class="col-7 offset-5">
-        <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true"
-          (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-        <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" 
-          (click)="updateStock()">{{saveButton}}</button>
+  </div>
+
+  <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+    <div class="row pl-2">
+      <div class="col-md-3 col-lg-2 col-sm-4 col-2 col-xl-1 mr-3 pr-0">
+        <label>Minimo:</label>
+      </div>
+      <div class="col-md-5 col-lg-5 col-sm-5 col-4 pl-0">
+        <input mdbActive type="number" [(ngModel)]="minStock" class="form-control customInput customInputNumberAmount"
+          id="minimum">
       </div>
     </div>
+    <div *ngIf="stockControl && !minStock" class="alert alert-danger">
+      El stock minimo es requerido`
+    </div>
+  </div>
+
+  <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm">
+    <div class="row pl-2">
+      <div class="col-md-3 col-lg-2 col-sm-4 col-2 col-xl-1 mr-3 pr-0">
+        <label>Actual:</label>
+      </div>
+      <div class="col-md-5 col-lg-5 col-sm-5 col-4 pl-0">
+        <input mdbActive type="number" [(ngModel)]="currentStock"
+          class="form-control customInput customInputNumberAmount" id="current">
+      </div>
+    </div>
+    <div *ngIf="stockControl && !currentStock" class="alert alert-danger">
+      El stock actual es requerido.
+    </div>
+  </div>
+</div>
+<div class="col-12">
+  <div class="row col-md-12 col-lg-12 col-xl-7 offset-xl-5">
+    <div class="col-md-6 col-lg-6 col-xl-4">
+      <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect
+        [class.customButtonCancel]="true" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    </div>
+    <div class="col-md-6 col-lg-6 col-xl-4 offset-xl-1">
+      <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect
+        [class.btn-primary-custom]="true" (click)="updateStock()">{{saveButton}}</button>
+    </div>
+  </div>
 </div>
