--- a/src/app/stock-control/stock-control.component.html
+++ b/src/app/stock-control/stock-control.component.html
@@ -13,7 +13,7 @@
       </div>
     </div>
 
-    <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
+    <div class="row pl-0 pr-0 ml-0 mr-0 pt-0" style="height: 80vh;">
       <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
         <div class="row mb-2 customBox pt-1 pb-2 mt-2 text-center">
           <form #form="ngForm" novalidate class="form-inline">
