--- a/src/app/qrGenerator/qr-generator.component.html
+++ b/src/app/qrGenerator/qr-generator.component.html
@@ -10,7 +10,7 @@
 </ng-template>
 
 <ng-template #confirmationTemplate>
-    <div class="container col-md-12">
+    <div class="col-md-12">
         <div class="row pageTitle primary-color">
           <div class="col-md-12">
             <h4 class="text-white text-center mb-0">{{ confirmationTitle }}</h4>    
