--- a/src/app/category/category-modify/category-modify.component.html
+++ b/src/app/category/category-modify/category-modify.component.html
@@ -63,7 +63,7 @@
 
         <app-file-input (validator)="onNotified($event)" [type]="'img'" [subtype]="'category'">
         </app-file-input>
-        <div *ngIf="validPicture == false && pictureTouched == true" class="alert alert-danger">
+        <div *ngIf="validPicture == '' && pictureTouched == true" class="alert alert-danger">
           La imagen de la categoria es requerida.
         </div>
 
